--- a/Alg-2/CMakeLists.txt
+++ b/Alg-2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Alg-2)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Alg-2 ./ main.cpp ../Alg-3/main.cpp)
+add_executable(Alg-2  main.cpp )
